// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery DOM Structure renders correctly 1`] = `
<div
  class="widget-gallery my-gallery"
  data-focusindex="0"
>
  <section
    aria-label="Mock props header aria label"
    class="widget-gallery-header widget-gallery-filter"
  >
    <input />
  </section>
  <div
    class="widget-gallery-content infinite-loading"
  >
    <div
      aria-label="Mock props ListBox aria label"
      class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
      role="list"
    >
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
    </div>
  </div>
</div>
`;

exports[`Gallery DOM Structure renders correctly with onclick event 1`] = `
<div
  class="widget-gallery my-gallery"
  data-focusindex="0"
>
  <section
    aria-label="Mock props header aria label"
    class="widget-gallery-header widget-gallery-filter"
  >
    <input />
  </section>
  <div
    class="widget-gallery-content infinite-loading"
  >
    <div
      aria-label="Mock props ListBox aria label"
      class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
      role="list"
    >
      <div
        class="widget-gallery-item widget-gallery-clickable item-class"
        role="listitem"
      >
        <div
          class="widget-gallery-item-button"
          role="button"
          tabindex="0"
        >
          Item content
        </div>
      </div>
      <div
        class="widget-gallery-item widget-gallery-clickable item-class"
        role="listitem"
      >
        <div
          class="widget-gallery-item-button"
          role="button"
          tabindex="0"
        >
          Item content
        </div>
      </div>
      <div
        class="widget-gallery-item widget-gallery-clickable item-class"
        role="listitem"
      >
        <div
          class="widget-gallery-item-button"
          role="button"
          tabindex="0"
        >
          Item content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gallery with accessibility properties renders correctly 1`] = `
<div
  class="widget-gallery my-gallery"
  data-focusindex="0"
>
  <section
    aria-label="filter title"
    class="widget-gallery-header widget-gallery-filter"
  >
    <input />
  </section>
  <div
    class="widget-gallery-content infinite-loading"
  />
  <section
    aria-label="empty message"
    class="widget-gallery-empty"
  >
    <div
      class="empty-placeholder"
    >
      <span>
        No items found
      </span>
    </div>
  </section>
</div>
`;

exports[`Gallery with empty option renders correctly 1`] = `
<div
  class="widget-gallery my-gallery"
  data-focusindex="0"
>
  <section
    aria-label="Mock props header aria label"
    class="widget-gallery-header widget-gallery-filter"
  >
    <input />
  </section>
  <div
    class="widget-gallery-content infinite-loading"
  />
  <section
    class="widget-gallery-empty"
  >
    <div
      class="empty-placeholder"
    >
      <span>
        No items found
      </span>
    </div>
  </section>
</div>
`;

exports[`Gallery with pagination renders correctly 1`] = `
<div
  class="widget-gallery my-gallery"
  data-focusindex="0"
>
  <div
    class="widget-gallery-top-bar"
  >
    <div
      class="widget-gallery-pagination"
    >
      <div
        aria-label="Pagination"
        class="pagination-bar"
      >
        <button
          aria-label="Go to first page"
          class="btn pagination-button"
          disabled=""
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon step-backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M23.19 6.63L11.51 15.61C11.25 15.81 11.25 16.2 11.51 16.4L23.2 25.38C23.53 25.64 24.01 25.4 24.01 24.99V7.02C24.01 6.6 23.53 6.37 23.2 6.63H23.19Z"
                fill="currentColor"
              />
              <path
                d="M10 6H8V26H10V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Go to previous page"
          class="btn pagination-button"
          disabled=""
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon backward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.19 6.63L3.51 15.61C3.25 15.81 3.25 16.2 3.51 16.4L14.2 25.38C14.53 25.64 15.01 25.4 15.01 24.99V7.02C15.01 6.6 14.53 6.37 14.2 6.63H14.19Z"
                fill="currentColor"
              />
              <path
                d="M27.19 6.63L16.5 15.61C16.24 15.81 16.24 16.2 16.5 16.4L27.19 25.38C27.52 25.64 28 25.4 28 24.99V7.02C28 6.6 27.52 6.37 27.19 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <span
          class="sr-only sr-only-focusable"
        >
          Currently showing 1 to 10 of 20
        </span>
        <div
          aria-hidden="true"
          class="paging-status"
        >
          1 to 10 of 20
        </div>
        <button
          aria-label="Go to next page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon forward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.81 6.63C17.48 6.37 17 6.61 17 7.02V24.98C17 25.4 17.48 25.63 17.81 25.37L28.5 16.39C28.76 16.19 28.76 15.8 28.5 15.6L17.81 6.63Z"
                fill="currentColor"
              />
              <path
                d="M4.81 6.63C4.48 6.37 4 6.61 4 7.02V24.98C4 25.4 4.48 25.63 4.81 25.37L15.5 16.39C15.76 16.19 15.76 15.8 15.5 15.6L4.81 6.63Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Go to last page"
          class="btn pagination-button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              class="pagination-icon step-forward"
              fill="currentColor"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.81 6.63C8.48 6.37 8 6.61 8 7.02V24.98C8 25.4 8.48 25.63 8.81 25.37L20.5 16.39C20.76 16.19 20.76 15.8 20.5 15.6L8.81 6.63Z"
                fill="currentColor"
              />
              <path
                d="M24 6H22V26H24V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <section
    aria-label="Mock props header aria label"
    class="widget-gallery-header widget-gallery-filter"
  >
    <input />
  </section>
  <div
    class="widget-gallery-content"
  >
    <div
      aria-label="Mock props ListBox aria label"
      class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
      role="list"
    >
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
    </div>
  </div>
</div>
`;

exports[`Gallery without filters renders structure without header container 1`] = `
<div
  class="widget-gallery my-gallery"
  data-focusindex="0"
>
  <div
    class="widget-gallery-content infinite-loading"
  >
    <div
      aria-label="Mock props ListBox aria label"
      class="widget-gallery-items widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
      role="list"
    >
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
      <div
        class="widget-gallery-item item-class"
        role="listitem"
      >
        Item content
      </div>
    </div>
  </div>
</div>
`;
